In progress : creating portfolio page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <meta name="description"
+          content="Hristian Ivanov's webpage dedicated to learning and coding in C#. Explore tutorials, projects, and more.">
+    <meta name="keywords"
+          content="hristian ivanov, Hristian Ivanov, hristian, ivanov, Hristian, C#, coding, learning, programming">
+    <meta name="author" content="Hristian Ivanov">
+    <meta name="robots" content="index, follow">
+
+    <title>Hristian Ivanov - C# Developer and Coding Enthusiast</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+
+    <link rel="stylesheet" href="fontello-icons/css/heartbeat.css">
+
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
-    
+
+<header class="site-header">
+    <h2 class="title">Hristian Ivanov</h2>
+    <strong class="subtitle">Junior C# Developer</strong>
+</header>
+
+
+<main class="site-main">
+    <section class="about-section">
+        <header class="section-title title">About Me</header>
+        <div class="section-text">
+            <p>My name is Hristian Ivanov and I'm a software developer/DevOps engineer. I'm from Bulgaria,
+                living in Kazanlak. You can find me on
+                <a class="no-underline" href="https://github.com/hristianivanov" target="_blank">
+                    <i class="icon-github-circled hoverable"></i>
+                </a>,
+                <a class="no-underline" href="https://www.linkedin.com/in/hristian-ivanov" target="_blank">
+                    <i class="icon-linkedin-squared hoverable"></i>
+                </a> or on
+                <a class="no-underline" href="https://instagram.com/h_ivanow" target="_blank">
+                    <i class="icon-instagram hoverable"></i></a>.
+            </p>
+            <p> On this page you can find some information about me and a few blog posts I wrote. Most of them are about
+                topics
+                that I'm most interested in, such as containers, security, CI/CD, or about programming languages like
+                Python
+                or
+                Go. I also have a couple of opensource side-projects which are listed down below.
+            </p>
+        </div>
+        <div class="personal-information cols">
+            <div class="column">
+                <h3 class="column-title"><i class="icon-heartbeat"></i> Live so far...</h3>
+                <ul class="column-list">
+                    <li>Breathing since 2005</li>
+                    <li>Started studying CS in 2023</li>
+                    <li>Got Bachelors in 2024</li>
+                    <li>Started working at IBM in 2024</li>
+                    <li>Got masters with honours in 2019</li>
+                </ul>
+            </div>
+            <div class="column">
+                <h3 class="column-title"><i class="icon-fire"></i> Passionate about...</h3>
+                <ul class="column-list">
+                    <li>Food</li>
+                    <li>Books</li>
+                    <li>Weight lifting</li>
+                    <li>Coding</li>
+                    <li>Music</li>
+                </ul>
+            </div>
+            <div class="column">
+                <h3 class="column-title"><i class="icon-lightbulb"></i> Thinking about...</h3>
+                <ul class="column-list">
+                    <li>Container Security</li>
+                    <li>Scalable systems</li>
+                    <li>CI/CD</li>
+                    <li>Cloud-native applications</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="projects-section">
+        <header>
+            <h2 class="section-title title">Projects</h2>
+            <p>These are some of my projects, you can find all of them on my
+                <a class="no-underline" href="https://github.com/MartinHeinz" target="_blank"><i
+                        class="icon-github-circled hoverable"></i></a>.</p>
+        </header>
+        <div class="projects">
+            <article class="project-item">
+                <div class="left">
+                    <div class="project-thumbnail">
+                        <img src="" alt="" loading="lazy" width="250" height="150">
+                    </div>
+                </div>
+                <div class="right">
+                    <h3>Blueprint/Template For Golang Projects</h3>
+                    <p>Finding the perfect setup for software project has always been a struggle for me. So, this is my ultimate template for Golang projects.</p>
+                    <div class="project-tags">
+                        <i class="icon-tag hoverable"></i>
+                        <span class="tag">Docker</span>
+                        <span class="tag">Golang</span>
+                        <span class="tag">Makefile</span>
+                        <span class="tag">Blueprint</span>
+                        <span class="tag">CICD</span>
+                    </div>
+                </div>
+            </article>
+            <article class="project-item">
+                <div class="left">
+                    <div class="project-thumbnail">
+                        <img src="" alt="" loading="lazy" width="250" height="150">
+                    </div>
+                </div>
+                <div class="right">
+                    <h3>Blueprint/Template For Golang Projects</h3>
+                    <p>Finding the perfect setup for software project has always been a struggle for me. So, this is my ultimate template for Golang projects.</p>
+                    <div class="project-tags">
+                        <i class="icon-tag hoverable"></i>
+                        <span class="tag">Docker</span>
+                        <span class="tag">Golang</span>
+                        <span class="tag">Makefile</span>
+                        <span class="tag">Blueprint</span>
+                        <span class="tag">CICD</span>
+                    </div>
+                </div>
+            </article>
+            <article class="project-item">
+                <div class="left">
+                    <div class="project-thumbnail">
+                        <img src="" alt="" loading="lazy" width="250" height="150">
+                    </div>
+                </div>
+                <div class="right">
+                    <h3>Blueprint/Template For Golang Projects</h3>
+                    <p>Finding the perfect setup for software project has always been a struggle for me. So, this is my ultimate template for Golang projects.</p>
+                    <div class="project-tags">
+                        <i class="icon-tag hoverable"></i>
+                        <span class="tag">Docker</span>
+                        <span class="tag">Golang</span>
+                        <span class="tag">Makefile</span>
+                        <span class="tag">Blueprint</span>
+                        <span class="tag">CICD</span>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+
+    <section class="page_section" id="clients">
+        <h2 class="fadeInDown animated wow animated" style="visibility: visible; animation-name: fadeInDown;">
+            Certificates</h2>
+
+        <div class="splide">
+            <div class="splide__track">
+                <ul class="splide__list certifications">
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Diploma for Python Web Developer.jpeg" target="_blank">
+                            <img src="img/certs/diploma python web.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Programming Basics - May 2022 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/basic.png" alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Programming Fundamentals with Python - September 2022 - Certificate.jpeg"
+                           target="_blank">
+                            <img src="img/certs/fundamentals.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Python Advanced - January 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/advanced.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Python OOP - February 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/oop.png" alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Python Web Basics - May 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/basic_web.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Python Web Framework - June 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/python web framework.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/HTML & CSS - September 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/html_css.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/JS Front-End - October 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/js front end.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/Angular - February 2024 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/angular.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+
+                    <!-- Certificate -->
+                    <li class="splide__slide">
+                        <a href="img/certificates/IT Career Booster - October 2023 - Certificate.jpeg" target="_blank">
+                            <img src="img/certs/it career boost.png"
+                                 alt="Petko Todorov - Python Developer and Creative Designer">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer id="footer">
+    <div class="footer-left"> Copyright &copy; 2024 Hristian Ivanov</div>
+    <div class="footer-right">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Subscribe</a></li>
+                <li><a href="#">Tip jar</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+<script src="js/lucide-icons.js"></script>
 </body>
 </html>
