Finish stable version for deployment

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 <header class="site-header">
     <div class="site-wrapper">
         <h2 class="title">Hristian Ivanov</h2>
-        <strong class="subtitle">Junior C# Developer</strong>
+        <strong class="subtitle">Fullstack Junior C# Developer</strong>
     </div>
 </header>
 
 <main class="site-main">
-    <section class="about-section">
+    <section id="about-section">
         <div class="site-wrapper">
             <header class="section-title title">About Me</header>
             <div class="section-text">
                 <p>My name is Hristian Ivanov and I'm a software developer/DevOps engineer. I'm from Bulgaria,
-                    living in Kazanlak. You can find me on
+                    living currently in Kazanlak. You can find me on
                     <a class="no-underline" href="https://github.com/hristianivanov" target="_blank">
                         <i class="icon-github-circled hoverable"></i>
                     </a>,
@@ -48,14 +48,10 @@
                     <a class="no-underline" href="https://instagram.com/h_ivanow" target="_blank">
                         <i class="icon-instagram hoverable"></i></a>.
                 </p>
-                <p> On this page you can find some information about me and a few blog posts I wrote. Most of them are
-                    about
-                    topics
-                    that I'm most interested in, such as containers, security, CI/CD, or about programming languages
-                    like
-                    Python
-                    or
-                    Go. I also have a couple of opensource side-projects which are listed down below.
+                <p> On this page, you'll find information about me. My journey with C# has honed my skills in designing
+                    and developing exceptional web applications. I combine technical expertise with creative vision to
+                    ensure each project is both functional and visually captivating, providing memorable user
+                    experiences. Additionally, I have several open-source side projects listed below.
                 </p>
             </div>
             <div class="personal-information cols">
@@ -63,26 +59,26 @@
                     <h3 class="column-title"><i class="icon-heartbeat"></i> Live so far...</h3>
                     <ul class="column-list">
                         <li>Breathing since 2005</li>
-                        <li>Started studying CS in 2023</li>
-                        <li>Got Bachelors in 2024</li>
-                        <li>Started working at IBM in 2024</li>
-                        <li>Got masters with honours in 2019</li>
+                        <li>Started studying C# in 2019</li>
+                        <li>Looking for my first job</li>
+                        <li>Moving to Plovdiv for university</li>
+                        <li>Dedicated to constant improvement</li>
                     </ul>
                 </div>
                 <div class="column">
                     <h3 class="column-title"><i class="icon-fire"></i> Passionate about...</h3>
                     <ul class="column-list">
-                        <li>Food</li>
-                        <li>Books</li>
+                        <li>Sci-fi movies</li>
                         <li>Weight lifting</li>
                         <li>Coding</li>
+                        <li>Design</li>
                         <li>Music</li>
                     </ul>
                 </div>
                 <div class="column">
                     <h3 class="column-title"><i class="icon-lightbulb"></i> Thinking about...</h3>
                     <ul class="column-list">
-                        <li>Container Security</li>
+                        <li>Cybersecurity</li>
                         <li>Scalable systems</li>
                         <li>CI/CD</li>
                         <li>Cloud-native applications</li>
@@ -92,7 +88,7 @@
         </div>
     </section>
 
-    <section class="projects-section">
+    <section id="projects-section">
         <div class="site-wrapper">
             <header>
                 <h2 class="section-title title">Projects</h2>
@@ -104,20 +100,20 @@
                 <article class="project-item">
                     <div class="left">
                         <div class="project-thumbnail">
-                            <img src="" alt="" loading="lazy" width="250" height="150">
+                            <img src="imgs/projects/DevHunter-thumbnail.png" alt="" loading="lazy">
                         </div>
                     </div>
                     <div class="right">
-                        <h3>Blueprint/Template For Golang Projects</h3>
-                        <p>Finding the perfect setup for software project has always been a struggle for me. So, this is
-                            my
-                            ultimate template for Golang projects.</p>
+                        <h3>DevHunter / ITJob Searching Web Application</h3>
+                        <p> School graduate web project, written in C# with ASP.NET MVC, SQL Server, EF Core, and MVC
+                            pattern. Interactive web application for job searching</p>
                         <div class="project-tags">
                             <i class="icon-tag hoverable"></i>
-                            <span class="tag">Docker</span>
-                            <span class="tag">Golang</span>
-                            <span class="tag">Makefile</span>
-                            <span class="tag">Blueprint</span>
+                            <span class="tag">Csharp</span>
+                            <span class="tag">ASP.NET</span>
+                            <span class="tag">Entity Framework</span>
+                            <span class="tag">MSSQL</span>
+                            <span class="tag">Cloudinary</span>
                             <span class="tag">CICD</span>
                         </div>
                     </div>
@@ -125,42 +121,38 @@
                 <article class="project-item">
                     <div class="left">
                         <div class="project-thumbnail">
-                            <img src="" alt="" loading="lazy" width="250" height="150">
+                            <img src="imgs/projects/CarRentalSystem-thumbnail.png" alt="" loading="lazy">
                         </div>
                     </div>
                     <div class="right">
-                        <h3>Blueprint/Template For Golang Projects</h3>
-                        <p>Finding the perfect setup for software project has always been a struggle for me. So, this is
-                            my
-                            ultimate template for Golang projects.</p>
+                        <h3>Car Rental System Web Application </h3>
+                        <p> Simple MVC project that focuses on Car Rentals. The application allows users to
+                            register and log in, browse available cars and make reservations. </p>
                         <div class="project-tags">
                             <i class="icon-tag hoverable"></i>
-                            <span class="tag">Docker</span>
-                            <span class="tag">Golang</span>
-                            <span class="tag">Makefile</span>
-                            <span class="tag">Blueprint</span>
-                            <span class="tag">CICD</span>
+                            <span class="tag">Csharp</span>
+                            <span class="tag">Bootstrap</span>
+                            <span class="tag">ASP.NET</span>
+                            <span class="tag">Entity Framework</span>
+                            <span class="tag">MSSQL</span>
                         </div>
                     </div>
                 </article>
                 <article class="project-item">
                     <div class="left">
                         <div class="project-thumbnail">
-                            <img src="" alt="" loading="lazy" width="250" height="150">
+                            <img src="imgs/projects/CarRentalWinForms-thumbnail.png" alt="" loading="lazy">
                         </div>
                     </div>
                     <div class="right">
-                        <h3>Blueprint/Template For Golang Projects</h3>
-                        <p>Finding the perfect setup for software project has always been a struggle for me. So, this is
-                            my
-                            ultimate template for Golang projects.</p>
+                        <h3>Car Rental System Windows Forms Application</h3>
+                        <p> Interactive designed windows forms car rental configurator. Written in C# with SQL Server
+                            and MVC pattern.</p>
                         <div class="project-tags">
                             <i class="icon-tag hoverable"></i>
-                            <span class="tag">Docker</span>
-                            <span class="tag">Golang</span>
-                            <span class="tag">Makefile</span>
-                            <span class="tag">Blueprint</span>
-                            <span class="tag">CICD</span>
+                            <span class="tag">WinForms</span>
+                            <span class="tag">GunaUI2</span>
+                            <span class="tag">Entity Framework</span>
                         </div>
                     </div>
                 </article>
@@ -168,9 +160,14 @@
         </div>
     </section>
 
-
-    <section class="certificates-section" id="clients">
-        <h2>Certificates</h2>
+    <section id="certificates-section">
+        <div class="site-wrapper">
+            <header>
+                <h2 class="title">Certificates</h2>
+                <p>These are all certificates during my education at <a class="underline" href="https://softuni.bg/">SoftUni</a>
+                </p>
+            </header>
+        </div>
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list certificates">
@@ -257,6 +254,16 @@
             </div>
         </div>
     </section>
+
+    <section id="contact-section">
+        <div class="site-wrapper">
+            <h2 class="title">Contact</h2>
+            <p>You can reach out to me through <a href="https://www.linkedin.com/in/hristian-ivanov"><i
+                    class="icon-linkedin-squared hoverable"></i></a> or <a href="https://instagram.com/h_ivanow"><i
+                    class="icon-instagram hoverable"></i></a>,
+                as well as on my mail address at <code class="inline">hristianfancha@gmail.com</code></p>
+        </div>
+    </section>
 </main>
 
 <footer id="footer" class="site-wrapper">
@@ -264,43 +271,16 @@
     <div class="footer-right">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Subscribe</a></li>
-                <li><a href="#">Tip jar</a></li>
+                <!--                <li><a href="#">Home</a></li>-->
+                <!--                <li><a href="#">Contact</a></li>-->
+                <!--                <li><a href="#">Subscribe</a></li>-->
+                <!--                <li><a href="#">Tip jar</a></li>-->
             </ul>
         </nav>
     </div>
 </footer>
 
-<script>
-    let perPage = 3;
-
-    const perPageRestrictions = {
-        '-1200': 2,
-        '-650': 1,
-    };
-
-    for (const [width, elementsOnDisplay] of Object.entries(perPageRestrictions)) {
-        if (window.innerWidth <= Number(Math.abs(width))) {
-            perPage = elementsOnDisplay;
-        }
-    }
-
-    const splide = new Splide('.splide', {
-        type: 'loop',
-        drag: 'free',
-        focus: 'center',
-        snap: true,
-        perPage: perPage,
-        autoScroll: {
-            speed: 1,
-        },
-    });
-
-    splide.mount(window.splide.Extensions);
-</script>
 <script src="js/lucide-icons.js"></script>
-
+<script src="js/certificates-caroucel.js"></script>
 </body>
 </html>
