bug fix : relative paths to missing certificates images

--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
                     </li>
                     <li class="splide__slide">
                         <a href="#">
-                            <img src="imgs/certificates/Programming%20Fundamentals%20with%20C%23%20-%20May%202022%20-%20Certificate.jpeg"
+                            <img src="imgs/certificates/Programming%20Fundamentals%20with%20Csharp%20-%20May%202022%20-%20Certificate.jpeg"
                                  alt="Hristian Ivanov - C# Developer and Creative Designer">
                         </a>
                     </li>
                     <li class="splide__slide">
                         <a href="#">
-                            <img src="imgs/certificates/C%23%20Advanced%20-%20September%202022%20-%20Certificate.jpeg"
+                            <img src="imgs/certificates/Csharp%20Advanced%20-%20September%202022%20-%20Certificate.jpeg"
                                  alt="Hristian Ivanov - C# Developer and Creative Designer">
                         </a>
                     </li>
                     <li class="splide__slide">
                         <a href="#">
-                            <img src="imgs/certificates/C%23%20OOP%20-%20October%202022%20-%20Certificate.jpeg"
+                            <img src="imgs/certificates/Csharp%20OOP%20-%20October%202022%20-%20Certificate.jpeg"
                                  alt="Hristian Ivanov - C# Developer and Creative Designer">
                         </a>
                     </li>
@@ -246,7 +246,7 @@
                     </li>
                     <li class="splide__slide">
                         <a href="#">
-                            <img src="imgs/certificates/Diploma%20for%20C%23%20Web%20Developer.jpeg"
+                            <img src="imgs/certificates/Diploma%20for%20Csharp%20Web%20Developer.jpeg"
                                  alt="Hristian Ivanov - C# Developer and Creative Designer">
                         </a>
                     </li>
