new feature : contact page

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     <div class="footer-right">
         <nav>
             <ul>
-                <!--                <li><a href="#">Home</a></li>-->
-                <!--                <li><a href="#">Contact</a></li>-->
-                <!--                <li><a href="#">Subscribe</a></li>-->
-                <!--                <li><a href="#">Tip jar</a></li>-->
+                                <li><a href="#">Home</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="#">Subscribe</a></li>
+                                <li><a href="#">Tip jar</a></li>
             </ul>
         </nav>
     </div>
