--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <header>
                 <h2 class="section-title title">Projects</h2>
                 <p>These are some of my projects, you can find all of them on my
-                    <a class="no-underline" href="https://github.com/MartinHeinz" target="_blank"><i
+                    <a class="no-underline" href="https://github.com/hristianivanov" target="_blank"><i
                             class="icon-github-circled hoverable"></i></a>.</p>
             </header>
             <div class="projects">
