--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,20 @@
     </div>
 </section>
 
+<footer id="footer" class="site-wrapper">
+    <div class="footer-left"> Copyright &copy; 2024 Hristian Ivanov</div>
+    <div class="footer-right">
+        <nav>
+            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="#">Subscribe</a></li>
+                                <li><a href="#">Tip jar</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+
 <script src="js/lucide-icons.js"></script>
 <script src="js/certificates-caroucel.js"></script>
 </body>
